@@ -30,6 +30,7 @@ test : test-compile 01 02 03 04 05 06 07 08 09 10 11 12 13 14
 	./01-connect-invalid-id-utf8.py
 	./01-connect-invalid-protonum.py
 	./01-connect-invalid-reserved.py
+	./01-connect-max-connections.py
 	./01-connect-success.py
 	./01-connect-uname-invalid-utf8.py
 	./01-connect-uname-no-flag.py
